--- a/app/views/layouts/rails_admin/form.html.erb
+++ b/app/views/layouts/rails_admin/form.html.erb
@@ -1,57 +1,23 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<% content_for :head do %>
   <title><%= @page_name %> | <%= @plugin_name %></title>
-  <%= stylesheet_link_tag('rails_admin/base.css') %>
   <%= stylesheet_link_tag('rails_admin/form.css') %>
-  <%= stylesheet_link_tag('rails_admin/jquery-ui-smoothness/jquery-ui-1.8.9.custom.css') %>
   <%= stylesheet_link_tag('rails_admin/ra.filtering-multiselect.css') %>
   <%= stylesheet_link_tag('rails_admin/colorpicker.css') %>
 
   <%= javascript_include_tag('ckeditor/ckeditor.js') if File.exists?(File.join(Rails.root, 'public/javascripts/ckeditor/ckeditor.js')) %>
-
-  <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js" %>
-  <%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js" %>
-  <%= javascript_include_tag "rails_admin/application.js", "rails_admin/rails.js","rails_admin/ra.filtering-multiselect.js", "rails_admin/ra.remote-form.js" %>
-
-  <%= csrf_meta_tag %>
-</head>
-
+  <%= javascript_include_tag "rails_admin/ra.filtering-multiselect.js" %>
+  <%= javascript_include_tag "rails_admin/ra.remote-form.js" %>
+<% end %>
+<%= render(:partial => 'layouts/rails_admin/head') %>
 <body>
   <div id="wrapper">
-    <div id="header">
-      <div id="headerLeft">
-        <ul class="breadcrumb">
-          <li>
-            <%= link_to(t('home.name'), '/') %>
-          </li>
-          <li>
-            &rsaquo;
-            <%= link_to(t('admin.dashboard.name'), rails_admin_dashboard_path) %>
-          </li>
-          <li>
-            &rsaquo;
-            <%= link_to(@model_config.update.label, rails_admin_list_path(:model_name => @abstract_model.to_param)) %>
-          </li>
-          <li>
-            &rsaquo;
-            <span><%= @page_name %></span>
-          </li>
-        </ul>
-        <h1 id="logo">
-          <%= link_to rails_admin_dashboard_path do %>
-            <span class="image_replacement"><%= @plugin_name %></span>
-          <% end -%>
-        </h1>
-      </div>
-
-<%= render(:partial => 'rails_admin/main/navigation') %>
-
-      <div id="headerRight">
-<%= render(:partial => 'rails_admin/main/user_info', :locals => {:current_user => _current_user}) %>
-      </div>
-    </div>
+    <% content_for :breadcrumb do %>
+      <li><%= link_to(t('home.name'), '/') %></li>
+      <li>&rsaquo; <%= link_to(t('admin.dashboard.name'), rails_admin_dashboard_path) %></li>
+      <li>&rsaquo; <%= link_to(@model_config.update.label, rails_admin_list_path(:model_name => @abstract_model.to_param)) %></li>
+      <li>&rsaquo; <span><%= @page_name %></span></li>
+    <% end %>
+    <%= render(:partial => 'layouts/rails_admin/header') %>
     <div id="content">
 <%= yield %>
     </div>
