--- a/app/views/rails_admin/main/edit.html.erb
+++ b/app/views/rails_admin/main/edit.html.erb
@@ -2,9 +2,8 @@
         <div class="ui-widget-header">
           <%= @page_name %>
         </div>
-        </div>
         <div class="ra-block-content">
-          <div class="ra-block-toolbar clearfix">
+          <div class="ra-block-toolbar ui-state-highlight clearfix">
             <%= render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash}) -%>
             <ul>
               <li>
