--- a/app/views/rails_admin/main/_form_filtering_multiselect.html.erb
+++ b/app/views/rails_admin/main/_form_filtering_multiselect.html.erb
@@ -17,7 +17,9 @@
                 <span class="errorMessage"><%= "#{field.label } #{field.errors.first}" %></span>
                 <% end %>
                 <p class="help"><%= field.help %></p>
-                <%= javascript_tag do %>
+                <% head_style('rails_admin/ra.filtering-multiselect.css') %>
+                <% head_javascript "rails_admin/ra.filtering-multiselect.js" %>
+                <% head_javascript do %>
                   $j(document).ready(function($){
                     $("#<%= "associations_#{name}" %>").filteringMultiselect({
 
