--- a/app/views/rails_admin/main/index.html.erb
+++ b/app/views/rails_admin/main/index.html.erb
@@ -1,3 +1,8 @@
+<% head_style "rails_admin/list" %>
+<% head_style "rails_admin/dashboard" %>
+<% head_style "rails_admin/ra.timeline" %>
+<% head_javascript "rails_admin/application.js" %>
+<% head_javascript "rails_admin/ra.timeline.js" %>
         <div class="ra-block">
           <div class="ui-widget-header clearfix">
             <%= @page_name %>
