--- a/app/views/rails_admin/main/_form_datetime.html.erb
+++ b/app/views/rails_admin/main/_form_datetime.html.erb
@@ -5,9 +5,10 @@
                 <span class="errorMessage"><%= "#{field.label } #{field.errors.first}" %></span>
                 <% end %>
                 <p class="help"><%= field.help %></p>
-                <%= javascript_tag do %>
+                <% head_javascript "rails_admin/ra.datetimepicker.js" %>
+                <% head_javascript do %>
                   $j(document).ready(function($){
-                    $("#<%= "#{field.to_param}" %>").datepicker(<%= field.datepicker_options.html_safe %>);
+                    $("#<%= "#{field.to_param}" %>").datetimepicker(<%= field.datepicker_options.html_safe %>);
                   });
                 <% end %>
               </div>
