--- a/app/views/rails_admin/main/new.html.erb
+++ b/app/views/rails_admin/main/new.html.erb
@@ -1,3 +1,6 @@
+<% head_style "rails_admin/form.css" %>
+<% head_javascript "rails_admin/application.js" %>
+<% head_javascript "rails_admin/ra.remote-form.js" %>
       <div class="ra-block">
         <div class="ui-widget-header">
           <%= @page_name %>
