--- a/app/views/rails_admin/main/_navigation.html.erb
+++ b/app/views/rails_admin/main/_navigation.html.erb
@@ -1,6 +1,7 @@
 <%
   max_visible_tabs = RailsAdmin::Config::Sections::Navigation.max_visible_tabs
   models = RailsAdmin::Config::Sections::Navigation.visible_models
+  models.reject! { |m| !authorized?(:list, m.abstract_model.model) }
 %>
       <ul id="nav">
         <li <%if @page_type == "dashboard" %>class="active"<% end %>><%= link_to(t("admin.dashboard.name"), rails_admin_dashboard_path) %></li>
