--- a/app/views/rails_admin/main/list.html.erb
+++ b/app/views/rails_admin/main/list.html.erb
@@ -29,9 +29,11 @@
             <li>
              <%= link_to(t("admin.history.name"), rails_admin_history_model_path, :class => "addlink") %>
             </li>
-            <li>
-             <%= link_to(t("admin.list.add_new"), rails_admin_new_path(:model_name => @abstract_model.to_param), :class => "addlink") %>
-            </li>
+            <% if authorized? :new, @abstract_model %>
+              <li>
+               <%= link_to(t("admin.list.add_new"), rails_admin_new_path(:model_name => @abstract_model.to_param), :class => "addlink") %>
+              </li>
+            <% end %>
           </ul>
         </div>
       </div>
@@ -65,8 +67,12 @@
                 </th>
                 <% end %>
                 <th class="other right">...</th>
-                <th class="action"><%= t("admin.list.edit_action").upcase%></th>
-                <th class="action"><%= t("admin.list.delete_action").upcase%></th>
+                <% if authorized? :edit, @abstract_model %>
+                  <th class="action"><%= t("admin.list.edit_action").upcase%></th>
+                <% end %>
+                <% if authorized? :delete, @abstract_model %>
+                  <th class="action"><%= t("admin.list.delete_action").upcase%></th>
+                <% end %>
                 <th class="action"><%= t("admin.list.select_action").upcase %></th>
               </tr>
             </thead>
@@ -80,15 +86,21 @@
                 <% end %>
                 <% other_right = params.reject{|key, value| key == "set"}.merge(:set => params[:set].to_i + 1) %>
                 <td class="other right"><%= link_to("...", other_right)%></td>
-                <td class="action edit"><%= link_to(t("admin.list.edit_action"), rails_admin_edit_path(:model_name => @abstract_model.to_param, :id => object.id)) %></td>
-                <td class="action delete"><%= link_to(t("admin.list.delete_action"), rails_admin_delete_path(:model_name => @abstract_model.to_param, :id => object.id)) %></td>
+                <% if authorized? :edit, @abstract_model, object %>
+                  <td class="action edit"><%= link_to(t("admin.list.edit_action"), rails_admin_edit_path(:model_name => @abstract_model.to_param, :id => object.id)) %></td>
+                <% end %>
+                <% if authorized? :delete, @abstract_model, object %>
+                  <td class="action delete"><%= link_to(t("admin.list.delete_action"), rails_admin_delete_path(:model_name => @abstract_model.to_param, :id => object.id)) %></td>
+                <% end %>
                 <td class="action select"><%= check_box_tag "bulk_ids[]", object.id, false, :id => "bulk_destroy_#{object.id}" %></td>
               </tr>
               <% end %>
             </tbody>
           </table>
           <div id="tableFooter">
-            <%= submit_tag t("admin.list.delete_selected"), :id => "bulkdelete_btn" %>
+            <% if authorized? :delete, @abstract_model %>
+              <%= submit_tag t("admin.list.delete_selected"), :id => "bulkdelete_btn" %>
+            <% end %>
           </div>
         <% end %>
       </div>
