--- a/app/views/rails_admin/main/_new_submit_buttons.html.erb
+++ b/app/views/rails_admin/main/_new_submit_buttons.html.erb
@@ -5,9 +5,11 @@
   <li id="saveAddContainer">
     <%= submit_tag t("admin.new.save_and_add_another"), :class => "button", :name => "_add_another", :id => "saveAdd_btn" %>
   </li>
+  <% if authorized? :edit, @abstract_model %>
   <li id="saveEditContainer">
     <%= submit_tag t("admin.new.save_and_edit"), :class => "button", :name => "_add_edit", :id => "saveEdit_btn" %>
   </li>
+  <% end %>
   <li id="cancelContainer">
     <%= submit_tag t("admin.new.cancel"), :class => "button", :name => "_continue", :id => "cancel_btn" %>
   </li>
