Correct the path to ra.timeline.css, added specs.

--- a/app/views/rails_admin/main/index.html.erb
+++ b/app/views/rails_admin/main/index.html.erb
@@ -1,6 +1,6 @@
 <% head_style "rails_admin/list" %>
 <% head_style "rails_admin/dashboard" %>
-<% head_style "rails_admin/ra.timeline" %>
+<% head_style "rails_admin/ra.timeline.css" %>
 <% head_javascript "rails_admin/application.js" %>
 <% head_javascript "rails_admin/ra.timeline.js" %>
         <div class="ra-block">
