Implement date/time form inputs with jQuery

--- a/app/views/rails_admin/main/_form_datetime.html.erb
+++ b/app/views/rails_admin/main/_form_datetime.html.erb
@@ -5,10 +5,12 @@
                 <span class="errorMessage"><%= "#{field.label } #{field.errors.first}" %></span>
                 <% end %>
                 <p class="help"><%= field.help %></p>
+                <% head_style "rails_admin/jquery.ui.timepicker.css" %>
+                <% head_javascript "rails_admin/jquery.ui.timepicker.js" %>
                 <% head_javascript "rails_admin/ra.datetimepicker.js" %>
                 <% head_javascript do %>
                   $j(document).ready(function($){
-                    $("#<%= "#{field.to_param}" %>").datetimepicker(<%= field.datepicker_options.html_safe %>);
+                    $("#<%= "#{field.to_param}" %>").datetimepicker(<%= field.js_plugin_options.html_safe %>);
                   });
                 <% end %>
               </div>
