Add missing styling and javascript include directives

--- a/app/views/rails_admin/history/show.html.erb
+++ b/app/views/rails_admin/history/show.html.erb
@@ -6,6 +6,8 @@
   sort_reverse = params[:sort_reverse]
 
 %>
+<% head_javascript "rails_admin/application.js" %>
+<% head_style "rails_admin/list" %>
       <div class="ra-block">
         <div class="ui-widget-header">
           <%= @page_name %>
