--- a/app/views/rails_admin/main/bulk_delete.html.erb
+++ b/app/views/rails_admin/main/bulk_delete.html.erb
@@ -1,3 +1,4 @@
+<% head_javascript "rails_admin/application.js" %>
       <div class="ra-block">
         <div class="ui-widget-header">
           Delete confirmation
