--- a/app/views/rails_admin/main/delete.html.erb
+++ b/app/views/rails_admin/main/delete.html.erb
@@ -1,6 +1,7 @@
+<% head_javascript "rails_admin/application.js" %>
       <div class="ra-block">
         <div class="ui-widget-header">
-          <h2>Delete confirmation</h2>
+          Delete confirmation
         </div>
         <div class="ra-block-content">
 <%= render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash}) -%>
