--- a/app/views/rails_admin/main/list.html.erb
+++ b/app/views/rails_admin/main/list.html.erb
@@ -27,11 +27,6 @@
       width: <%= value[:width] %>px;
     }
   <% end %>
-  <% @other.each do |t| %>
-    .grid .other.<%= t %>{
-      display:none;
-    }
-  <% end %>
 <% end %>
       <div class="ra-block">
         <div class="ui-widget-header">
@@ -61,7 +56,7 @@
             <table class="grid">
               <thead>
                 <tr>
-                  <th class="other left">...</th>
+                  <th class="other left" <% if @other.include? "left" %>style="display: none"<% end %>>...</th>
                   <% properties.each do |property| %>
                   <% property_name = property.name %>
                   <% property_pretty_name = property.label %>
@@ -76,7 +71,7 @@
                     <% end %>
                   </th>
                   <% end %>
-                  <th class="other right">...</th>
+                  <th class="other right" <% if @other.include? "right" %>style="display: none"<% end %>>...</th>
                   <th class="action"><%= t("admin.list.edit_action").upcase if authorized? :edit, @abstract_model %></th>
                   <th class="action"><%= t("admin.list.delete_action").upcase if authorized? :delete, @abstract_model %></th>
                   <th class="action"><%= t("admin.list.select_action").upcase %></th>
@@ -105,12 +100,16 @@
                 <% @objects.each_with_index do |object, index| %>
                 <tr class="<%= index % 2 == 0 ? " odd" : " even" %>">
                   <% other_left = params.reject{|key, value| key == "set"}.merge(:set => params[:set].to_i - 1) %>
-                  <td class="other left"><%= link_to("...", other_left, remote: true) %></td>
+                  <td class="other left" <% if @other.include? "left" %>style="display: none"<% end %>>
+                    <%= link_to("...", other_left, remote: true) %>
+                  </td>
                   <% properties.map{|property| property.bind(:object, object)}.each do |property| %>
                     <td class="<%= "#{property.css_class}" %>"><%= [:text, :string].include?(property.type) ? property.formatted_value[0..40] : property.formatted_value %></td>
                   <% end %>
                   <% other_right = params.reject{|key, value| key == "set"}.merge(:set => params[:set].to_i + 1) %>
-                  <td class="other right"><%= link_to("...", other_right, remote: true)%></td>
+                  <td class="other right" <% if @other.include? "right" %>style="display: none"<% end %>>
+                    <%= link_to("...", other_right, remote: true)%>
+                  </td>
                   <td class="action edit">
                     <%= link_to(t("admin.list.edit_action"), rails_admin_edit_path(:model_name => @abstract_model.to_param, :id => object.id)) if authorized? :edit, @abstract_model, object %>
                   </td>
