--- a/app/views/rails_admin/main/_belongs_to_association.html.erb
+++ b/app/views/rails_admin/main/_belongs_to_association.html.erb
@@ -1,5 +1,5 @@
 <%
-  collection = field.associated_collection.sort_by{|object| object.first}
+  collection = field.associated_collection(authorization_adapter).sort_by{|object| object.first}
   selected = field.bindings[:object].send(field.child_key)
 
   if selected.nil? && params["associations"]
