Ensure sort by comparison objects are always strings (Ruby 1.8 specific problem when a record might have nil as its label)

--- a/app/views/rails_admin/main/_form_belongs_to.html.erb
+++ b/app/views/rails_admin/main/_form_belongs_to.html.erb
@@ -1,5 +1,5 @@
 <%
-  collection = field.associated_collection.sort_by{|object| object.first}
+  collection = field.associated_collection.sort_by{|object| object.first.to_s }
   selected = field.bindings[:object].send(field.child_key)
 
   if selected.nil? && params["associations"]
