Ensure sort by comparison objects are always strings

--- a/app/views/rails_admin/main/_form_filtering_multiselect.html.erb
+++ b/app/views/rails_admin/main/_form_filtering_multiselect.html.erb
@@ -14,7 +14,7 @@
       [config.list.with(:object => o).object_label, o.id]
     end
   else
-    collection = field.associated_collection.sort_by{|object| object.first}
+    collection = field.associated_collection.sort_by{|object| object.first.to_s}
   end
 
 %>
