Fix display bug on dashboard page: Model name in table is now using label override if present.

--- a/app/views/rails_admin/main/index.html.erb
+++ b/app/views/rails_admin/main/index.html.erb
@@ -17,7 +17,7 @@
               <% if authorized? :list, abstract_model %>
                 <tr class="<%= cycle 'odd', 'even' %>">
                   <td class="modelNameRow">
-                    <%= link_to(RailsAdmin.config(abstract_model).list.label, rails_admin_list_path(:model_name => abstract_model.to_param), :class => "show") %>
+                    <%= link_to(RailsAdmin.config(abstract_model).navigation.label, rails_admin_list_path(:model_name => abstract_model.to_param), :class => "show") %>
                   </td>
                   <td>
                   <% if (last_used = @most_recent_changes[abstract_model.pretty_name]) %>
