Bind list view's xhr handler only once as injecting the xhr response's body calls any document.ready events within the response. All list view's pages contain this code and apply the same handler over and over again.

--- a/app/views/rails_admin/main/list.html.erb
+++ b/app/views/rails_admin/main/list.html.erb
@@ -15,7 +15,7 @@
 
 <% head_javascript do %>
   $j(document).ready(function($){
-    $(this).bind("ajax:success", function(e, data, status, xhr){
+    $(this).one("ajax:success", function(e, data, status, xhr){
       $("#content").html(data);
     });
   });
