--- a/app/views/layouts/rails_admin/_head.html.erb
+++ b/app/views/layouts/rails_admin/_head.html.erb
@@ -5,8 +5,10 @@
   <meta name="robots" content="NONE,NOARCHIVE" />
   <%= stylesheet_link_tag('rails_admin/aristo/jquery-ui-1.8.7.custom.css') %>
   <%= stylesheet_link_tag('rails_admin/base') %>
-  <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js" %>
-  <%= javascript_include_tag "https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js" %>
+  <%= javascript_fallback "http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js",
+    "/javascripts/rails_admin/jquery-1.5.1.min.js", "typeof jQuery == 'undefined'" %>
+  <%= javascript_fallback "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.10/jquery-ui.min.js",
+    "/javascripts/rails_admin/jquery-ui-1.8.10.min.js", "!jQuery.ui" %>
   <%= javascript_include_tag "rails_admin/rails.js" %>
   <%= head_javascript %>
   <%= head_style %>
