Revert "Update the configuration of model label as per discussion here: https://github.com/sferik/rails_admin/issues/319/#issue/319/comment/875868"
This reverts commit c67eccc43d603d7aaabe0ab01de1fc2559f7ae35.

Conflicts:

	README.mkd

--- a/app/views/layouts/rails_admin/delete.html.erb
+++ b/app/views/layouts/rails_admin/delete.html.erb
@@ -20,7 +20,7 @@
           </li>
           <li>
             &rsaquo;
-            <%= link_to(@model_config.label, rails_admin_list_path(:model_name => @abstract_model.to_param)) %>
+            <%= link_to(@model_config.list.label, rails_admin_list_path(:model_name => @abstract_model.to_param)) %>
           </li>
           <li>
             &rsaquo;
