--- a/app/views/rails_admin/main/_form_filtering_multiselect.html.erb
+++ b/app/views/rails_admin/main/_form_filtering_multiselect.html.erb
@@ -11,7 +11,7 @@
 
   if xhr
     collection = config.abstract_model.get_bulk(selected).map do |o|
-      [config.list.with(:object => o).object_label, o.id]
+      [config.with(:object => o).object_label, o.id]
     end
   else
     collection = field.associated_collection.sort_by{|object| object.first.to_s}
