--- a/app/views/rails_admin/main/bulk_delete.html.erb
+++ b/app/views/rails_admin/main/bulk_delete.html.erb
@@ -1,11 +1,11 @@
 <% head_javascript "rails_admin/application.js" %>
       <div class="ra-block">
         <div class="ui-widget-header">
-          Delete confirmation
+          Confirmation de suppression
         </div>
 <%= render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash}) -%>
         <div class="ra-block-content">
-          <p>Are you sure you want to delete the following object along with all of the following related items will be deleted:</p>
+          <p>Êtes-vous sûr de vouloir supprimer les objets suivant ainsi que leurs dépendances ?</p>
           <%= render :partial => "delete_notice", :collection => @bulk_objects %>
           <%= form_tag rails_admin_bulk_destroy_path(:model_name => @abstract_model.to_param, :bulk_ids => @bulk_ids) do %>
             <ul class="submit clearfix">
