--- a/app/views/rails_admin/main/_form_has_one.html.erb
+++ b/app/views/rails_admin/main/_form_has_one.html.erb
@@ -1,7 +1,7 @@
 <%
   association_name = field.association[:name]
   child_key = field.association[:child_key].first
-  collection = field.associated_collection.sort_by{|object| object.first}
+  collection = field.associated_collection(authorization_adapter).sort_by{|object| object.first}
   selected = field.value
 
   if selected.nil? && params["associations"]
